[gd_scene load_steps=5 format=3 uid="uid://bgcc1ng7uhng1"]

[ext_resource type="Theme" uid="uid://nhqrcqxgcjis" path="res://ui_theme.tres" id="1_0x6nd"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_ml288"]
[ext_resource type="PackedScene" uid="uid://qmofemihhiaa" path="res://scenes/Server.tscn" id="2_xc8l4"]
[ext_resource type="PackedScene" uid="uid://b2ljetvkaygbm" path="res://scenes/Client.tscn" id="3_6bhb5"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ml288")
server_scene = ExtResource("2_xc8l4")
client_scene = ExtResource("3_6bhb5")

[node name="HFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer Left" type="Control" parent="HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VFlowContainer" type="VFlowContainer" parent="HFlowContainer"]
custom_minimum_size = Vector2(0, 1080)
layout_mode = 2
theme = ExtResource("1_0x6nd")
alignment = 1

[node name="Label" type="Label" parent="HFlowContainer/VFlowContainer"]
layout_mode = 2
theme = ExtResource("1_0x6nd")
text = "Server address:"
horizontal_alignment = 1

[node name="ServerAddress" type="LineEdit" parent="HFlowContainer/VFlowContainer"]
layout_mode = 2
theme = ExtResource("1_0x6nd")
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="HFlowContainer/VFlowContainer"]
layout_mode = 2
theme = ExtResource("1_0x6nd")
text = "Join game"

[node name="HSeparator" type="HSeparator" parent="HFlowContainer/VFlowContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HostButton" type="Button" parent="HFlowContainer/VFlowContainer"]
layout_mode = 2
theme = ExtResource("1_0x6nd")
text = "Host game
"

[node name="Spacer Right" type="Control" parent="HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HFlowContainer/VFlowContainer/JoinButton" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="HFlowContainer/VFlowContainer/HostButton" to="." method="_on_host_game_pressed"]
